# conferences

./: .gitignore  LICENSE  README.md
BigDataBBQ19/: .gitignore  Main.ipynb  Main.slides.html  Makefile  README.md  index.html  requirements.txt  tpot_exported_pipeline.py
DD_2018/: README.md  classification_example.ipynb  example_config.json  regression_case.ipynb  speech.txt  training_set.csv
DD_2024/: Analysis.ipynb  README.md  pyproject.toml
DD_2024/data/: raw_hr_oura.csv
EP_2017/: LICENSE  README.md  main.py
EP_2017/templates/: models.html
EP_2018/: classification.ipynb
EP_2018/examples/: test_set.csv
EP_2019/: Makefile  README.md
EP_2019/py_impl/: .gitignore  main.py  requirements.txt  simple_implementation.py  test.py
EP_2019/py_impl/simulation/: car.py  core.py  passenger.py  request.py
EP_2019/python/: .gitignore  main.py  tmp.py
EP_2019/python/pygame/: main.py
EP_2019/python/simulation/: car.py  core.py  main.py  passenger.py  request.py  utils.py
EP_2019/rust/: Cargo.toml
EP_2019/rust/src/: clock.rs  driver.rs  main.rs  request.rs  user.rs  utils.rs
EP_2019/rust_impl/: Cargo.toml
EP_2019/rust_impl/src/: car.rs  core.rs  main.rs  passenger.rs  request.rs
EP_2019/rust_impl/tests/: test.rs
EP_2023/: README.md  TSAnalysis.ipynb  justfile  pyproject.toml
EP_2023/data/: mood_dailio.csv  oura_sleep.csv
PP2020/: slides.html  slides.md
pyberlin2008/: README.md  slides.md
pyladies1903/: .gitignore  Cargo.toml  Makefile  README.md  are_we_ds_yet.md  count_words.py  index.html  main.py  reveal_presentation.html
pyladies1903/src/: lib.rs
pyladies1909/: .gitignore  Makefile  README.md  callgrind.out.91510  program.prof  requirements.txt  slides.md
pyladies2006/: .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  requirements.txt  run.sh  slides.md
pyladies2006/app/: Dockerfile  Makefile  TODO  app.py  docker-compose.yml  requirements.txt  results.csv  run.sh
pyladies2006/app/blueprints/: __init__.py  admin.py  quantify.py  user.py
pyladies2006/app/storage/: quantify.py  user.py
pyladies2006/self_quantify_app/: __init__.py  helpers.py
pyladies2006/self_quantify_app/blueprints/: __init__.py  quantify.py  user.py
(+7 files in other folders)
