[tool.poetry]
name = "science of flow simplified"
version = "0.1.0"
description = "top down practical approach for achieveing flow"
authors = ["alisa <alisa.dammer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.20.26"
numpy = "^1.26.4"
notebook = "^7.2.0"
matplotlib = "^3.9.0"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
