[package]
name = "rust_impl"
version = "0.1.0"
authors = ["a.dammer <a.dammer@mytaxi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.6"
num = "0.2"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
